--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,15 @@ font-size:17pt;
 }
 
 
+.indent{
+margin-left: 40px;
+}
+
+p.center-cross{
+text-align: center;
+}
+
+
 .scroll{
  overflow-y: scroll;
  overflow-x: hidden;
